# Mypythonproject

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-ci.yml
src/calculator_service/: __init__.py  calculator.py
tests/: test_calculator.py
