[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-service"
version = "0.1.0"
description = "Small Python project for testing CI/CD pipelines."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "CI Test Project" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
